# Water-Treatment-Plant-Digital-Twin-with-Fault-Aware-AI-Operator-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  TUMA206-course-project.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
docs/: agent-integration.md  architecture.md  cloud-bridge.md  demo-script.md  fault-catalog.md  process-simulator.md  tag-dictionary.md  telegram-alerts.md
slides/: README.md
src/water_treatment_digital_twin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wtdt/: __init__.py  __main__.py  agent_cli.py  runtime.py
src/wtdt/agent/: __init__.py  assistant.py  fault_detector.py  operator_agent.py
src/wtdt/cloud_bridge/: __init__.py  batcher.py  local_sub.py  main.py  tb_pub.py
src/wtdt/dashboard/: __init__.py  app.py
src/wtdt/historian/: __init__.py  schema.sql  store.py
src/wtdt/messaging/: __init__.py  publisher.py  topics.py
src/wtdt/plc/: __init__.py  controller.py
src/wtdt/simulator/: __init__.py  process.py
src/wtdt/telegram_alerts/: __init__.py  dashboard.py  gate.py  main.py  mqtt_source.py  query_bot.py  sender.py
tests/: test_cloud_bridge.py  test_fault_detector.py  test_historian.py  test_messaging.py  test_operator_agent.py  test_plc_controller.py  test_process.py  test_runtime.py  test_telegram_alerts.py  test_telegram_query_bot.py
