[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water-treatment-digital-twin"
version = "0.1.0"
description = "TUMA206 water treatment plant digital twin with PLC simulation, MQTT, historian, dashboard, and AI assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.0.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.7.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
wtdt = "wtdt.__main__:main"
wtdt-agent = "wtdt.agent_cli:main"
wtdt-cloud-bridge = "wtdt.cloud_bridge.main:main"
wtdt-telegram-alerts = "wtdt.telegram_alerts.main:main"
wtdt-telegram-bot = "wtdt.telegram_alerts.query_bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
